--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,2 @@
-
-.vs/VSWorkspaceState.json
-.vs/ProjectSettings.json
-.vs/KioskWeb/v17/.suo
-.vs/slnx.sqlite
-.vs/KioskWeb/project-colors.json
-.vs/KioskWeb/config/applicationhost.config
+.vs/
+.vscode/
