--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "https://team-beehive.github.io/KioskWeb/",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx rollup --config"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,11 @@
   "dependencies": {
     "@popperjs/core": "^2.11.2",
     "bootstrap": "^5.1.3",
+    "firebase": "^9.6.8",
     "jquery": "^3.6.0"
+  },
+  "devDependencies": {
+    "@rollup/plugin-node-resolve": "^13.1.3",
+    "rollup": "^2.70.0"
   }
 }
