--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "build": "npx sass scss/:css/ && npx rollup --config",
-    "watch": "npx sass --watch scss/:css/"
+    "watch": "npx sass --watch scss/:css/",
+    "lint": "npx eslint js/** imports/**"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "eslint": "^8.11.0",
     "rollup": "^2.70.0",
     "sass": "^1.49.9"
   }
