Pages moved to ejs & express

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "browser": true,
         "es2021": true,
-        "jquery": true
+        "jquery": true,
+        "node": true
     },
     "ignorePatterns": [
         "build/*.js"
