--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "webapp",
   "version": "1.0.0",
   "description": "https://team-beehive.github.io/KioskWeb/",
-  "main": "index.html",
+  "main": "main.js",
   "scripts": {
-    "build": "npx sass scss/:css/ && npx rollup --config",
-    "watch": "npx sass --watch scss/:css/",
+    "start": "node main.js",
+    "build": "npx sass scss/:public/css/ && npx rollup --config",
+    "watch": "npx sass --watch scss/:public/css/",
     "lint": "npx eslint js/** imports/**"
   },
   "repository": {
@@ -21,6 +22,8 @@
   "dependencies": {
     "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
+    "ejs": "^3.1.6",
+    "express": "^4.17.3",
     "firebase": "^9.6.10",
     "jquery": "^3.6.0"
   },
