Some light spellchecking and renaming

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapp",
+  "name": "kiosk-web",
   "version": "1.0.0",
   "description": "https://team-beehive.github.io/KioskWeb/",
   "main": "main.js",
