--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "ejs": "^3.0.2",
     "express": "^4.17.3",
     "firebase": "^9.6.11",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "jquery-ui": "^1.13.1"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "eslint": "^8.13.0",
     "rollup": "^2.70.2",
