--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery-ui": "^1.13.1"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.2.1",
     "eslint": "^8.13.0",
     "rollup": "^2.70.2",
